app/stylesheets/grid.sass
// 960 Grid System ~ Core CSS.
// Learn more ~ http://960.gs/
//Licensed under GPL and MIT.



// Reset and grid stylesheets
@import "compass/utilities/general/reset"
@import 960/grid.sass

+global-reset
//App Skin
@import skin.sass
// App stylesheets
@import default.sass
@import application.sass
@import formtastic.sass
@import formtastic_changes.sass
@import ui-lightness/jquery-ui-1.7.2.custom.sass
@import jquery.jcarousel.sass
@import jcarousel.skin.sass

//Image sizing for Non-facebook
.feature_bg
  .thumb
    img
      max-height: 280px
      max-width: 280px

#readArticle
  .thumb
    img
      max-height: 280px
      max-width: 280px

// The following are the current grid layout boxes for the site.
$ninesixty_columns: 12

$ninesixty_gutter_width: 20px

//#bodyWrapper, .panel_1, .panel_2
 // border: 1px dashed red
body
  +grid-system(12)

#header, #footer, #pageBody, #adspace, #subNav
  +grid(12)

.left, .right
  display: inline-block

#col_left
  position: relative
  z-index: 1
  +grid(8)
  +grid-children
  .left
    +alpha
  .right
    +omega
#col_right
  position: relative
  z-index: 1
  +grid(4)
  +grid-children
  .panel_2
    +alpha
    +omega

.panel_1, #hotTopicBar
  +grid(8)
  +alpha
  +omega

.panel_2
  +grid(4)

